# clawnema

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  README.md  clawnema-backend-server.ts  docker-compose.yml  fly.toml  pyproject.toml  railway.json  requirements.txt  vercel.json
api/: __init__.py  config.py  index.py  main.py
backend/: .env.example  Dockerfile  db.ts  package-lock.json  package.json  server.ts  theaters.ts  tsconfig.json
docs/: AGENT_INTEGRATION.md  BACKEND_PATCH.md  USER_GUIDE.md
frontend/: linux  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: AboutPage.tsx  ActivityFeed.tsx  AdminDashboard.tsx  AgentFooter.tsx  AgentLeaderboard.tsx  AgentProfileCard.tsx  AgentSidebar.tsx  CinemaHeader.tsx  CinemaLayout.tsx  CinemaLobby.tsx  CinemaView.tsx  CommentBubble.tsx  CommentFeed.tsx  MarqueeBanner.tsx  SceneAnalysis.tsx  SeatMap.tsx  StatsBar.tsx  TheaterCard.tsx  TheaterGrid.tsx
frontend/components/admin/: AdminStatsView.tsx  AdminTheatersView.tsx  MiniBarChart.tsx  TheaterFormDialog.tsx
frontend/lib/: agents.ts  api.ts  constants.ts  store.ts  types.ts
models/: database.py  schemas.py
services/: notification_service.py  payment_service.py  trio_service.py
skill/: SKILL.md  clawnema.ts  demo.ts  package.json
